services and observables

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
   </h1>
   </div>
 <h2>Let's get started </h2>
-
-<router-outlet></router-outlet>
+<app-employee-list></app-employee-list>
+<app-employee-details></app-employee-details>
+<!-- <router-outlet></router-outlet> -->
