routing demo added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,12 @@
   </h1>
   </div>
 <h2>Let's get started </h2>
-<app-employee-list></app-employee-list>
-<app-employee-details></app-employee-details>
-<!-- <router-outlet></router-outlet> -->
+<!-- <app-employee-list></app-employee-list>
+<app-employee-details></app-employee-details> -->
+
+<nav>
+  <a routerLink="/employee-list">Employees List</a>
+  <a routerLink = "/department-list">Department List</a>
+</nav>
+
+<router-outlet></router-outlet> 
